# This is a list of changes in pygame's history.
#
# SVN revision numbers, and CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing

[SVN 2380-2381] Jun 19, 2009
    Color.set_length method... to change Color length to 1,2,3 or 4.
    Surface.get_palette(_at) return Color with length 3.

[SVN 2366] Jun 17, 2009
    [BUG] Memory leak in a few modules.  Thanks Lorenz Quack.

[SVN 2365] Jun 16, 2009
    Started to add basic slice support to Color type.

[SVN 2311] Jun 4, 2009
    Fixed another Color regression... colors are now tasty again when pickled.

[SVN 2305] Jun 2, 2009
    Make pygame.tests.__init__.py import __main__.py. This is done
      consistently with other pygame.tests modules.

[SVN 2294-2303] Jun 1, 2009
    Added some notes about Color instead of tuple for some Surface functions.
    Midi, no abort on dealloc by default. have explicit close/abort available.
    Updated midi docs.
    Sysfont tests pass ok on OSX now(and windows+linux etc).
    Sysfont on OSX more resiliant. Broke up tests to find broken ones more
      easily.
    Updated test/README.TXT for tags files... eg: some_module_tags.py.
    Added a little tool to help with creating WHATSNEW from svn logs.
    Add a little TODO to svn_log_to_whatsnew.py to make its WHATSNEW output
      nicer.

[SVN 2289-2293] May 31, 2009
    Fix midi_test.py so Python3 compiles it without errors.
    Let Surface methods accept and return Color instances.
    Minor type correction in Rect docs.
    Extend background unit test default timeout to 2 minutes.
    Add gfxdraw unit tests and fix uncovered bugs.

[SVN 2284-2287] May 30, 2009
    Sysfont, added fallback for OSX that doesn't have X11.
    Tests and fixes for midi. Better validation Input/Output to avoid crashes.
    Fixed up test which was failing on ubuntu with python2.x.

[SVN 2278] May 29, 2009